--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Add a picture</h1>
-<%= form_for(@picture) do |f| %> 
+<%= link_to("Back to Pictures", "/pictures") %>
+<%= form_for(@picture) do |f| %>
   <p>
     <%= f.label :artist %><br>
     <%= f.text_field :artist %>
